<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_PST_ID" Id="{925a0024-5e53-4722-97c6-35607704151d}">
    <Declaration><![CDATA[TYPE T_PST_ID :
STRUCT
	Pst: INT;
	Pst_Ptb: INT;
	Pst_Ptb_Umc: INT;
	Pst_Ptb_Vpc: INT;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>